# Rohan_Projects_Raw

./: README.md
Applied Numerical Optimization/Bonus1/: ano_case1.m  ano_case2.m  ano_project1.m
Applied Numerical Optimization/Bonus2/: Bonus02.m  convex_bound.m  original_ECs.m
Applied Numerical Optimization/Bonus3/: Bonus3.m  definitions.m  non_linear_constraint.m
Computational Intelligence/Project1/: Grp2_Task45.pptm  ProjectA45-Group2.ipynb
Computational Intelligence/Project2/: CIE_Report_Code.ipynb
Fast Iterative Solvers/PROJECT 2/: FIS_proj_2.docx
Fast Iterative Solvers/PROJECT 3/: PR3,Rohan,Balaji.docx
Machine Learning/Data Preprocessing/: Untitled1.ipynb  automatic_data_creation(optimization and root).ipynb  automatic_data_generator.ipynb  compensation.py  data_generation_peaks_elimination-(elimination of df_mean).ipynb  data_generator.py  data_imports.py  new_data (Transformation).ipynb  tansformation_new.py  transformation.py
Machine Learning/Data_Preprocessing_2021/: new_data (Transformation).ipynb  new_data (vizualization).ipynb
Machine Learning/ML/: Combined PINN v2.ipynb  Gradient_Boost_Regressor.ipynb  LSTM.ipynb  Random_Forest_Regressor.ipynb  RegCNN.ipynb  RegCNN_Tuning.ipynb  RegCNN_parallel.ipynb  custom_model.h5  machine_learning1_basic.ipynb  machine_learning1_tuning.ipynb  neural_networks.ipynb  neural_networks_Tuning.ipynb
Model Based Estimation Methods/bonus 6/: MBEM_6.m  uc.csv
Model Based Estimation Methods/bonus3/: BP3_start.m  error.mat
Parallel Programming (OpenMP and MPI)/Hw2/: CMakeLists.txt  hw2.cpp  run.sh
Parallel Programming (OpenMP and MPI)/hw1/: CMakeLists.txt  README  constants.h  postProcessor.cpp  postProcessor.h  read-mesh.cpp  settings.cpp  settings.h  tri.cpp  tri.cpp~  tri.h
Parallel Programming (OpenMP and MPI)/pr1/Project1/skeleton/: 2D_Unsteady_Diffusion.cpp  CMakeLists.txt  README  Untitled.code-workspace  constants.h  postProcessor.cpp  postProcessor.cpp~  postProcessor.h  settings.cpp  settings.h  solver.cpp  solver.cpp~  solver.h  tri.cpp  tri.h
Parallel Programming (OpenMP and MPI)/pr2/code/code2/: 2D_Unsteady_Diffusion.cpp  CMakeLists.txt  README  postProcessor.cpp  settings.in  solver.cpp  solver.cpp~  solver.h  tri.cpp
Parallel Programming (OpenMP and MPI)/pr3/Code/: 2D_Unsteady_Diffusion.cpp  CMakeLists.txt  README  constants.h  postProcessor.cpp  postProcessor.h  settings.cpp  settings.h  solver.cpp  solver.h  tri.cpp  tri.h
Partial Differential Equations/JAN 17/: main.m  main_smooth.m
Partial Differential Equations/JAN 27/: hll_solv.m  (+1 more)
(+97 files in other folders)
